--- a/styles.html/css.css
+++ b/styles.html/css.css
@@ -1,15 +1,16 @@
-*{font-family: 'Open Sans', sans-serif;
+*{margin: 0;
+    font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
 
 /* banner styles */
-.banner{margin:206px 230px; align-content:right; }
-.banner-title{font-weight: 700;
-    font-size: 65px;line-height: 76px;font-family:
+.banner{margin:0px 100px; align-content:right; }
+.banner-title{  font-weight: 700;
+    font-size: 60px;line-height: 76px; margin-bottom:20px;
 }
 .banner-paragraph{font-weight: 400;
     font-size: 20px;
-    line-height: 26px;
+    line-height: 26px; margin-bottom:25px
 
 }
 .btn{
@@ -20,5 +21,10 @@ font-size: 20px;
 border: 0; padding:20px 25px ;
 background: #F15B22;
 color: #FFFFFF;
-
+}
+.header{
+    background-image:url(../images/banner/banner1.png);
+    background-repeat: no-repeat;width: 1600px;
+    height: 1000px;
+    
 }
