--- a/styles.html/style.css
+++ b/styles.html/style.css
@@ -81,12 +81,12 @@ text-align: center;
     margin-top:50px ;}
    /* mindset styles */
    .mindset-title{  text-align: left;
-    margin: 0px 400px ;font-weight: 700;
+   font-weight: 700; margin: 0px 400px ;
     font-size: 40px; color: #151414; margin:0 400px ;
-    background-image:url(../images/watch.png) ;background-repeat: no-repeat;
-    height: 300px;padding: 50px 40px 0; gap: 10px;
-    background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%);
+    height: 300px;padding: 50px 40px 0; gap: 10px; background-image:url(../images/gradient2.png) ;  background-repeat: no-repeat;
+    
 }
+
     .btn2{
         width: 160px;
         height: 40px;border-radius: 5px;
